Fixed following clitches: -Lisää hintatieto button has the wrong width -Delete button after pressing Lisää hintatieto is missing the icon too -Space missing between checkboxes and checkbox options in Kohderyhmät, kielet etc.

--- a/src/components/HelFormFields/HelCheckbox.scss
+++ b/src/components/HelFormFields/HelCheckbox.scss
@@ -3,6 +3,10 @@
     margin-top: 14px;
     line-height: 32px;
 
+    input {
+        margin-right: 14px;
+    }
+
     label {
         input {
             position: relative;
